src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>TMF_Statement_of_Intent__c</fullName>
        <description>TMFORUM: An overview and goals of the Agreement.</description>
        <label>Statement of Intent</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMF_Type__c</fullName>
        <description>The type of the agreement. For example &quot;commercial&quot;</description>
        <label>Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMF_Version__c</fullName>
        <description>A string identifying the version of the agreement</description>
        <label>Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>